# shopping-partner-agent

./: .env.example  CONTRIBUTING.md  Dockerfile.agent  README.md  docker-compose.yml  mkdocs.yml  openapi.yaml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: build-and-push.yml
docs/: index.md  modules.md
shopping_partner_agent/: __init__.py  __main__.py  __version__.py  agent_config.json  main.py
shopping_partner_agent/skills/shopping-partner/: skill.yaml
tests/: test_main.py
